# snippets

./: # Prompt.md  .gitignore  .prettierrc  README.md  docker-compose.debug.yml  docker-compose.yml  jest.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
.github/workflows/: codeql.yml  eslint.yml  main.yml  prettier.yml  rust-clippy.yml  rust.yml
app/: fonts.ts  globals.css  layout.tsx  page.tsx
app/editor/: page.tsx
app/styles/: Fonts.tsx  index.tsx
app/tests/app/: page.test.jsx
app/types/: Account.tsx  Code.tsx  File.tsx  common.tsx  index.tsx  settings.tsx
app/ui/: Account.tsx  Author.tsx  Background.tsx  Button.tsx  Buttons.tsx  ColorPicker.tsx  Combobox.tsx  Drawer.tsx  Fonts.tsx  Input.tsx  Logo.tsx  Menu.tsx  Modal.tsx  ModeSwitch.tsx  Nav.tsx  Select.tsx  Slide.tsx  Snippet.tsx  Switch.tsx  Tab.tsx  index.tsx
app/utils/: callbacks.tsx  constants.tsx  exports.ts  icons.tsx  index.tsx
components/: Account.tsx  Alert.tsx  Author.tsx  Background.tsx  Buttons.tsx  Constants.tsx  Editor.tsx  Logo.tsx  Snippet.tsx  Tab.tsx  Warning.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
styles/: Home.module.css  home.css
styles/components/: Account.module.css  Buttons.module.css  Snippet.module.css  Tab.module.css  account.css  author.css  buttons.css  editor.css  snippet.css  tab.css
types/: index.ts
